@@ -1,4 +1,6 @@
 1.2.9:
+Sam Lantinga - Fri Oct  2 07:15:35 PDT 2009
+ * Implemented seamless looping for music playback
 Forrest Voight - 2009-06-13 20:31:38 PDT
  * ID3 files are now recognized as MP3 format
 Austen Dicken - Tue Feb 26 23:28:27 PST 2008
